# files-to-prompt

./: .gitignore  answer.md  prompt.txt  pyproject.toml
files_to_prompt/: cli.py  guidance.py
util/: functions
