[tool.poetry]
name = "files-to-prompt"
version = "0.2.1"
description = "Concatenate a directory full of files into a single prompt for use with LLMs"
authors = ["Simon Willison <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.0.0"
diskcache = "*"
openai = "^1.7.1"
platformdirs = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
diskcache = "*"
[tool.poetry.scripts]
files-to-prompt = "files_to_prompt.cli:cli"

[tool.pytest.ini_options]
markers = [
    "this: description of the this marker",
    "llm: tests that call llm",
]
